deployment-qotd-csharp-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qotd-csharp-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qotd-csharp-v2
  template:
    metadata:
      labels:
        app: qotd-csharp-v2
    spec:
      containers:
      - name: qotd-csharp-v2
        image: quay.io/donschenck/qotd-csharp:v2
        ports:
        - containerPort: 5000
