deployment-qotd-csharp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qotd-csharp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qotd-csharp
  template:
    metadata:
      labels:
        app: qotd-csharp
    spec:
      containers:
      - name: qotd-csharp
        image: quay.io/donschenck/qotd-csharp:v1
        ports:
        - containerPort: 5000
          protocol: TCP
        imagePullPolicy: Always
      restartPolicy: Always
