service-qotd-csharp-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qotd-csharp-v2
  name: qotd-csharp-v2
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: qotd-csharp-v2
  sessionAffinity: None
  type: NodePort
