service-qotd-csharp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qotd-csharp
  name: qotd-csharp
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: qotd-csharp
  sessionAffinity: None
  type: LoadBalancer
