route-qotd-csharp.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: qotd-csharp
  name: qotd-csharp
spec:
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: qotd-csharp
    weight: 100
